oss/catch-all-tcp.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: catchall-tcp-http
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: front-layer
spec:
  entryPoints:
    - web
  routes:
    - match: HostSNI(`*`)
      priority: 1000
      services:
        - name: traefik
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: catchall-tcp-https
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: front-layer
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`*`)
      priority: 999
      services:
        - name: traefik
          port: 443
  tls:
    passthrough: true
