oss/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: oss-dashboard
  namespace: oss-traefik
  annotations:
    kubernetes.io/ingress.class: front-layer
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`oss.${CLUSTERNAME}.${FULLDOMAINNAME}`)
      services:
        - name: api@internal
          kind: TraefikService
  tls: {}
